tdf#79198 START CENTER: Close button doesn't reappear after being clicked

Change-Id: I23e3aed71eec85e8b8f0aceac125809fd56be4d5
Reviewed-on: https://gerrit.libreoffice.org/26399
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Samuel Mehrbrodt <Samuel.Mehrbrodt@cib.de>
(cherry picked from commit 27bd030aa033565dfdff56c298c797c80cee5160)
Reviewed-on: https://gerrit.libreoffice.org/26416
(cherry picked from commit a503fb0df9960bb1a76a7a35273d740d0ea31f32)